assert-struct/tests/snapshots/enums__enum_variant.snap
---
source: assert-struct/tests/enums.rs
expression: message
---
error: assert_struct! failed
 --> assert-struct/tests/enums_errors/enum_variant.rs:7:27
  |
7 |     assert_struct!(value, None);
  |                           ^^^^ expected variant None, got Some(10)
